Crime Map Updated

--- a/UrdanetaCrimeMap/res/layout/activity_statistics.xml
+++ b/UrdanetaCrimeMap/res/layout/activity_statistics.xml
@@ -9,8 +9,26 @@
     tools:context="edu.ucuccs.urdanetacrimemap.Statistics" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="List of Barngay with the number of crime"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ListView
+        android:id="@+id/myList"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignParentBottom="true" >
+    </ListView>
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/myList" />
 
 </RelativeLayout>
